Implemented Empty and cleaned Append/Insert

--- a/Linked List.vcxproj.filters
+++ b/Linked List.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="Linked List.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="List.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
